# double-pendulum-calc-rust

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
